--- a/app/src/main/res/layout/activity_pagina_pricipal.xml
+++ b/app/src/main/res/layout/activity_pagina_pricipal.xml
@@ -1,41 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PaginaPricipal">
 
     <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#B7A88F"
+        app:layout_constraintBottom_toTopOf="@+id/logocoleccio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logoprincipal" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="244dp" />
+
+    <ImageView
         android:id="@+id/logocoleccio"
-        android:layout_width="430dp"
-        android:layout_height="260dp"
-        android:background="#231F20"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#231f20"
+        app:layout_constraintBottom_toTopOf="@+id/logomuseu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:srcCompat="@drawable/logocoleccio" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="488dp" />
+
     <ImageView
         android:id="@+id/logomuseu"
-        android:layout_width="443dp"
-        android:layout_height="213dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="#3e88a3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logocoleccio"
         app:srcCompat="@drawable/logomuseu" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="425dp"
-        android:layout_height="265dp"
-        android:background="#B7A88F"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logoprincipal" />
-
-  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
