--- a/app/src/main/res/layout/activity_pagina_pricipal.xml
+++ b/app/src/main/res/layout/activity_pagina_pricipal.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/logoprincipal" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guia01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -38,7 +38,7 @@
         app:srcCompat="@drawable/logocoleccio" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guia02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
