--- a/app/src/main/res/layout/activity_pagina_pricipal.xml
+++ b/app/src/main/res/layout/activity_pagina_pricipal.xml
@@ -7,7 +7,7 @@
     tools:context=".PaginaPricipal">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/logoprincipal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#B7A88F"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/logoprincipal"
         app:srcCompat="@drawable/logocoleccio" />
 
     <androidx.constraintlayout.widget.Guideline
