--- a/app/src/main/res/layout/activity_pagina_pricipal.xml
+++ b/app/src/main/res/layout/activity_pagina_pricipal.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="244dp" />
+        app:layout_constraintGuide_percent="0.33" />
 
     <ImageView
         android:id="@+id/logocoleccio"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="488dp" />
+        app:layout_constraintGuide_percent="0.6689466" />
 
     <ImageView
         android:id="@+id/logomuseu"
