--- a/app/src/main/res/layout/activity_vista1.xml
+++ b/app/src/main/res/layout/activity_vista1.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#B7A88F"
+        android:padding="@dimen/vista1_losgos"
         app:layout_constraintBottom_toTopOf="@+id/logocoleccio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#231f20"
+        android:padding="@dimen/vista1_losgos"
         app:layout_constraintBottom_toTopOf="@+id/logomuseu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,6 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#3e88a3"
+        android:padding="@dimen/vista1_losgos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
