--- a/app/src/main/res/layout/activity_vista4.xml
+++ b/app/src/main/res/layout/activity_vista4.xml
@@ -22,4 +22,16 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvAlumnes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bnvBotoneraVista4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
