--- a/app/src/main/res/layout/vista4_estructura.xml
+++ b/app/src/main/res/layout/vista4_estructura.xml
@@ -9,18 +9,10 @@
         android:id="@+id/image01"
         android:layout_width="212dp"
         android:layout_height="270dp"
-        app:layout_constraintEnd_toStartOf="@+id/image02"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageView
-        android:id="@+id/image02"
-        android:layout_width="197dp"
-        android:layout_height="270dp"
-        android:layout_marginEnd="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/image01"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
@@ -29,27 +21,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="207dp" />
+        app:layout_constraintGuide_end="16dp" />
 
     <TextView
         android:id="@+id/tv01"
         android:layout_width="207dp"
         android:layout_height="68dp"
-        android:layout_marginEnd="5dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toStartOf="@+id/tv02"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image01" />
-
-    <TextView
-        android:id="@+id/tv02"
-        android:layout_width="207dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="5dp"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv01"
-        app:layout_constraintTop_toBottomOf="@+id/image02" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image01" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
