--- a/app/src/main/res/layout/vista4_estructura.xml
+++ b/app/src/main/res/layout/vista4_estructura.xml
@@ -7,30 +7,26 @@
 
     <ImageView
         android:id="@+id/image01"
-        android:layout_width="212dp"
+        android:layout_width="0dp"
         android:layout_height="270dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.557"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp" />
-
     <TextView
         android:id="@+id/tv01"
-        android:layout_width="207dp"
-        android:layout_height="68dp"
+        android:layout_width="208dp"
+        android:layout_height="33dp"
         android:text="TextView"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/image01"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/image01"
         app:layout_constraintTop_toBottomOf="@+id/image01" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
