--- a/app/src/main/res/menu/botonera_arriba.xml
+++ b/app/src/main/res/menu/botonera_arriba.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/bt_text"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/appbar_iconamidalletra"
         android:title="text"
         app:showAsAction="always" />
 </menu>
