Update vista4 y Vista5

--- a/app/src/main/res/layout/activity_ejemplo_base_de_datos.xml
+++ b/app/src/main/res/layout/activity_ejemplo_base_de_datos.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="268dp"
+        android:onClick="ConsultaArtistas"
         android:text="Artistas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.692"
@@ -21,21 +22,36 @@
         android:id="@+id/btInsertar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="268dp"
-        android:text="insertar"
+        android:onClick="InsertacionEscultura"
+        android:text="insertarEs"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btInsertar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="200dp"
+        android:onClick="InsertacionArtista"
+        android:text="insertarAr"
+        app:layout_constraintBottom_toTopOf="@+id/btInsertar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btEsculturas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="80dp"
+        android:onClick="ConsultaEscultura"
         android:text="Esculturas"
         app:layout_constraintStart_toEndOf="@+id/btInsertar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/listadefotos" />
 
     <TextView
         android:id="@+id/tvContenido"
@@ -51,13 +67,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btEsculturas" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/btEsculturas"
+    <Spinner
+        android:id="@+id/listadefotos"
+        android:layout_width="199dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toBottomOf="@+id/listadefotosar" />
+
+    <Spinner
+        android:id="@+id/listadefotosar"
+        android:layout_width="199dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.575"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
