--- a/app/src/main/res/layout/vista4_estructura.xml
+++ b/app/src/main/res/layout/vista4_estructura.xml
@@ -3,30 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/tv01"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#222121"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/image01"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/image01" />
 
     <ImageView
         android:id="@+id/image01"
         android:layout_width="0dp"
-        android:layout_height="270dp"
+        android:layout_height="323dp"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toTopOf="@+id/tv01"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <TextView
-        android:id="@+id/tv01"
-        android:layout_width="208dp"
-        android:layout_height="33dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/image01"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/image01"
-        app:layout_constraintTop_toBottomOf="@+id/image01" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/foto1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
