--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnvBotoneraVistaMaps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#B53939"
+        app:backgroundTint="@color/fons_fosc"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemIconTint="@color/color_botonera_inferior"
+        app:itemTextColor="@color/color_botonera_inferior"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/botonera_inferior">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -7,4 +28,6 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivity"
 
+
     />
+</androidx.constraintlayout.widget.ConstraintLayout>
