--- a/app/src/main/res/layout/activity_vista2.xml
+++ b/app/src/main/res/layout/activity_vista2.xml
@@ -10,7 +10,7 @@
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bnvBotonera"
+        android:id="@+id/bnvBotoneraVista2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
@@ -27,14 +27,16 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container_view"
+        android:id="@+id/fg"
         android:name="com.example.m7uf2_projecte2_grup_beta.FragmentFundacio"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bnvBotonera"
+        app:layout_constraintBottom_toTopOf="@+id/bnvBotoneraVista2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tb_fundacion">
+        app:layout_constraintTop_toBottomOf="@+id/tb_fundacion"
+        app:layout_constraintVertical_bias="0.0">
 
     </androidx.fragment.app.FragmentContainerView>
 
