--- a/app/src/main/res/layout/fragment_fundacio.xml
+++ b/app/src/main/res/layout/fragment_fundacio.xml
@@ -33,7 +33,7 @@
         </LinearLayout>
 
         <me.biubiubiu.justifytext.library.JustifyTextView
-            android:id="@+id/desc_fundacio"
+            android:id="@+id/tv_titulo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/text_margin"
